# gap_project

./: README.md
agents/: agent.py  readme.md  translator.ipynb
application/: Cargo.toml  README.md
application/.dfx/local/canisters/backend/: backend.wasm  service.did.js
application/src/backend/src/: models.rs
application/src/desktop/: package-lock.json  package.json  readme.md
application/src/desktop/src/: App.css  App.tsx  index.css  main.tsx
application/src/desktop/src-tauri/: Cargo.toml
application/src/desktop/src-tauri/tmp_agents/: temp_agent_1753401769.py  temp_agent_1753403470.py
application/src/desktop/src/contexts/: NotificationContext.tsx
application/src/desktop/src/hooks/: useGlobalInput.ts  useNotification.ts
application/src/desktop/src/layouts/: layout.tsx
back/backend/: .env
back/backend/.dfx/local/: network-id
back/backend/scripts/: test_marketplace.sh
back/backend/src/backend/: Cargo.toml
back/backend/src/backend/src/: lib.rs  routes.rs
frontend/gapfront/: package-lock.json  readme.md  vite.config.ts
frontend/gapfront/src/: App.tsx
frontend/gapfront/src-tauri/: tauri.conf.json
frontend/gapfront/src-tauri/src/: lib.rs  main.rs
frontend/gapfront/src/components/butttons/: AddButn.tsx  DefaultBtn.tsx
frontend/gapfront/src/components/cards/: ProfileCard.tsx  UserAiCards.tsx
frontend/gapfront/src/components/inputs/: DefaultInput.tsx
frontend/gapfront/src/layouts/: layout.tsx
frontend/gapfront/src/services/chain/: service.ts
frontend/gapfront/src/views/agents_page/: page.tsx
(+23 files in other folders)
