[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core dependencies
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-timers = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utility dependencies
ic-llm = "1.0.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
indexmap = "2.0"
uuid = { version = "1.17", features = ["v5"] }

